--- a/MegaApiClient.Tests/packages.config
+++ b/MegaApiClient.Tests/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
-  <package id="coveralls.net" version="0.7.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Moq" version="4.5.29" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="Castle.Core" version="4.0.0" targetFramework="net45" />
+  <package id="coveralls.net" version="0.8.0-unstable0013" targetFramework="net45" developmentDependency="true" />
+  <package id="Moq" version="4.7.25" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
   <package id="OpenCover" version="4.6.519" targetFramework="net45" />
   <package id="Polly-Signed" version="4.3.0" targetFramework="net45" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
@@ -12,5 +12,5 @@
   <package id="xunit.core" version="2.1.0" targetFramework="net45" />
   <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net45" />
   <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.runner.console" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.runner.console" version="2.3.0-beta3-build3705" targetFramework="net45" developmentDependency="true" />
 </packages>
