Moved AssemblyInfo to root to be used by netstandard (required by InternalsVisibleTo) Removed old csproj files Added ASYNC to netstandard Added xunit.runner.json to disable shadowCopy and parallelizeTestCollections Rewrite MegaApiCLient.Tests csproj to target netcoreapp and net46 Refactored Crc32 to support netcore

--- a/MegaApiClient/MegaApiClient.csproj
+++ b/MegaApiClient/MegaApiClient.csproj
@@ -39,7 +39,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
-    <DefineConstants>NETCORE</DefineConstants>
+    <DefineConstants>NETCORE;ASYNC</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' != 'net40' ">
