--- a/MegaApiClient/MegaApiClient.csproj
+++ b/MegaApiClient/MegaApiClient.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <Description>MegaApiClient library gives full access to Mega.co.nz API. You can manage filesystem and download/upload files.</Description>
     <Copyright>Copyright ©  2017</Copyright>
@@ -29,28 +30,53 @@
   <PropertyGroup>
     <TargetFrameworks>net40;net45;net46;netstandard1.3;netstandard1.6</TargetFrameworks>
     <RootNamespace>CG.Web.MegaApiClient</RootNamespace>
+    <SignAssembly>False</SignAssembly>
+  </PropertyGroup>
+
+
+
+  <PropertyGroup>
+    <NetFramework>True</NetFramework>
+    <NetCore>False</NetCore>
+    <AsyncSupport>True</AsyncSupport>
+    <UseHttpClient>True</UseHttpClient>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard1.3' Or '$(TargetFramework)' == 'netstandard1.6'">
+    <NetFramework>False</NetFramework>
+    <NetCore>True</NetCore>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net40'">
+    <AsyncSupport>False</AsyncSupport>
+    <UseHttpClient>False</UseHttpClient>
+  </PropertyGroup>
+
+
+
+  <PropertyGroup Condition="$(AsyncSupport) == True">
+    <DefineConstants>ASYNC</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="$(AsyncSupport) == True And $(NetCore) == True">
+    <DefineConstants>ASYNC;NETCORE</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="$(NetFramework) == True">
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>../key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(TargetFramework)' != 'net40' ">
-    <DefineConstants>ASYNC</DefineConstants>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' Or '$(TargetFramework)' == 'netstandard1.6' ">
-    <DefineConstants>NETCORE;ASYNC</DefineConstants>
-  </PropertyGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net40' ">
+  <ItemGroup Condition="$(UseHttpClient) == True">
     <PackageReference Include="System.Net.Http" Version="4.3.2" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net40' Or '$(TargetFramework)' == 'net45' Or '$(TargetFramework)' == 'net46' ">
+  <ItemGroup Condition="$(NetFramework) == True">
     <Reference Include="System" />
     <Reference Include="System.Web" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' Or '$(TargetFramework)' == 'netstandard1.6' ">
+  <ItemGroup Condition="$(NetCore) == True">
     <Compile Remove="Properties\AssemblyInfo.cs" />
     <PackageReference Include="System.Threading.Thread" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="1.1.2" />
