--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,23 @@ deploy:
   server: https://www.myget.org/F/megaapiclient/api/v2
   api_key:
     secure: Fh+ZkfvseLY9z8DWLEFf1AlaJZQgzXCkWlIhHc1t4HLNo+w9+urXd2EyBLCTKzDv
-  # Deploy symbol package too
-  skip_symbols: false
+  skip_symbols: false # Deploy symbol package too
   symbol_server: https://www.myget.org/F/megaapiclient/symbols/api/v2/package
+  on:
+    appveyor_repo_tag: false
+- provider: NuGet
+  api_key:
+    secure: vRiGbIevyYj70e6bxkqbR1u+ixjw13pysqu8VcChwTEep6pxs7ehg2l8byXvQTUh
+  skip_symbols: true
+  on:
+    branch: master
+    appveyor_repo_tag: true
+- provider: GitHub
+  release: v$(appveyor_build_version)
+  description: 'Description'
+  auth_token:
+    secure: +346hyzBwuhGGVJJTgtAdGfoQ3ck26Q9zFx8mNSsWYkx8og19sJXjAlOYj8EnZv1
+  draft: true
+  on:
+    branch: master
+    appveyor_repo_tag: true
