Enable coverage using CodeCov (#64)
* Bump version to 1.6.1
* Force version in assemblies/nupkg
* Disable warnings about XML documention
* Build and run tests in debug mode with full PDB
* Run tests through OpenCover and push coverage to CodeCov
* Add different deployments in AppVeyor

--- a/MegaApiClient/MegaApiClient.csproj
+++ b/MegaApiClient/MegaApiClient.csproj
@@ -32,9 +32,13 @@
     <RootNamespace>CG.Web.MegaApiClient</RootNamespace>
     <SignAssembly>False</SignAssembly>
     <DocumentationFile>bin\docs\MegaApiClient.xml</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
 
-
+  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>True</DebugSymbols>
+  </PropertyGroup>
 
   <PropertyGroup>
     <NetFramework>True</NetFramework>
