Don't specify fixed version to allow build process to set proper version (reverted from commit 8d444d11a05c9bce21cf7dcf499b9a2bd7865262)

--- a/MegaApiClient/MegaApiClient.csproj
+++ b/MegaApiClient/MegaApiClient.csproj
@@ -5,7 +5,7 @@
     <Copyright>Copyright ©  2017</Copyright>
     <AssemblyTitle>Mega.co.nz client library</AssemblyTitle>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <VersionPrefix></VersionPrefix>
+    <VersionPrefix>1.6.0</VersionPrefix>
     <VersionSuffix></VersionSuffix>
     <Title>Mega.co.nz client library</Title>
     <Authors>Gregoire Pailler</Authors>
