Added doc files as artifact Call Clean task only once in Cake script Fixed warning in docfx related to framework version and change copyright

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,9 @@ artifacts:
   name: Nuget packages
 
 - path: '.\artifacts\docfx.zip'
+  name: Documentation archive
+
+- path: '.\docs\_site\**\*'
   name: Documentation
 
 deploy:
