--- a/MegaApiClient/MegaApiClient.csproj
+++ b/MegaApiClient/MegaApiClient.csproj
@@ -75,17 +75,18 @@
     <AssemblyOriginatorKeyFile>../key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
-  <ItemGroup Condition="$(UseHttpClient) == True">
-    <PackageReference Include="System.Net.Http" Version="4.3.2" />
-  </ItemGroup>
-
   <ItemGroup Condition="$(NetFramework) == True">
     <Reference Include="System" />
     <Reference Include="System.Web" />
   </ItemGroup>
 
+  <ItemGroup Condition="$(NetFramework) == True And $(UseHttpClient) == True">
+    <Reference Include="System.Net.Http" />
+  </ItemGroup>
+
   <ItemGroup Condition="$(NetCore) == True">
     <Compile Remove="Properties\AssemblyInfo.cs" />
+    <PackageReference Include="System.Net.Http" Version="4.3.2" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="1.1.2" />
   </ItemGroup>
 
